HHH-14371 Add --add-opens options required for Gradle plugin tests
Signed-off-by: Yoann Rodière <yoann@hibernate.org>